--- a/src/partials/thankyou.html
+++ b/src/partials/thankyou.html
@@ -32,7 +32,8 @@
   </div>
 </div>
 
-<scrip>
-  document.querySelector("#thankyou-btn").addEventListener("click", () => {
-  document.querySelector("#modal").classList.add("is-closed"); });
-</scrip>
+<script>
+  document.querySelector('#thankyou-btn').addEventListener('click', () => {
+    document.querySelector('#modal-thankyou').classList.add('is-closed');
+  });
+</script>
