--- a/src/partials/thankyou.html
+++ b/src/partials/thankyou.html
@@ -18,10 +18,10 @@
             ./images/thankyou-tablet-desktop@2x.png 2x
           "
         />
-        <img class="thankyou-picture" src="./images/thankyou-mobile.png" alt="Raspberries" />
+        <img src="./images/thankyou-mobile.png" alt="Raspberries" />
       </picture>
     </div>
-    <div>
+    <div class="aaa">
       <h2 class="thankyou-title">tHANK YOU</h2>
       <p class="thankyou-text">
         Thank you for your order! Our team is preparing your box with fresh, delicious fruits and
