--- a/src/sass/_thankyou.scss
+++ b/src/sass/_thankyou.scss
@@ -8,6 +8,10 @@
 }
 
 .modal-thankyou {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -33,8 +37,12 @@
   fill: var(--white-color);
 }
 
-.thankyou-picture {
-  margin: 0 auto 20px;
+.aaa {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 14px;
+  max-width: 295px;
 }
 
 .thankyou-title {
@@ -44,13 +52,11 @@
   letter-spacing: var(--letter-spacing);
   text-transform: uppercase;
   color: var(--white-color);
-  text-align: center;
-  margin-bottom: 14px;
+  // text-align: center;
   text-shadow: var(--text-shadow);
 }
 
 .thankyou-text {
-  font-weight: 400;
   line-height: 1.28571;
   letter-spacing: var(--letter-spacing);
   text-align: center;
