--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -1,9 +1,10 @@
 .contacts-main-paragraph {
     font-family: var(--font-family);
     font-weight: 500;
-    font-size: 32px;
+    font-size: 64px;
+    line-height: 64px;
     line-height: 100%;
-    letter-spacing: -0.04em;
+    letter-spacing: 0.01em;
     text-transform: uppercase;
     text-align: center;
     color: #fff;
@@ -28,6 +29,7 @@ font-weight: 400;
 line-height: 18px;
 letter-spacing: -0.04em;
 text-align: center;
+padding: 72px 24px;
 }
 
 .contacts-input {
@@ -45,10 +47,11 @@ color: #FFFFFF;
 
 .contacts-form {
     text-align: center;
+    gap: 80px;
 }
 .contacts-button {
     width: Hug (102px)px;
-    height: Hug (48px)px;
+    height: 48px;
     top: 134px;
     left: 290px;
     padding: 15px 35px 15px 35px;
@@ -57,3 +60,4 @@ color: #FFFFFF;
     opacity: 0px;
     background-color: #A4CB66;
 }
+
