--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -42,7 +42,7 @@ border-radius: 100px;
 opacity: 0.3px;
 border: 1px solid rgba(255, 255, 255, 1);
 background-color: transparent;
-color: #FFFFFF;
+padding: 0px 24px;
 }
 
 .contacts-form {
@@ -62,5 +62,10 @@ color: #FFFFFF;
 }
 
 .contacts-subscription {
-text-align: center; 
+margin-bottom: 150px;
+}
+.contacts-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
