--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,17 +1,17 @@
 <section class="contacts">
-<h1 style="position: relative; top: 40px;" class="contacts-main-paragraph">Fresh Harvest Box has <br> got you covered</h1>
+<h1 style="position: relative; top: 40px;" class="contacts-main-paragraph">Fresh Harvest Box has got you covered</h1>
 
 <div class="contacts-fruits">
 <ul class="contacts-photos">
 <li>
-<img class="contacts-img" src="./images/contacts-melon-desktop.jpg"
+<img class="contacts-melon" src="./images/contacts-melon-desktop.jpg"
 alt="melon"
 width="792"
 height="502"
 />   
 </li>
 <li>
-<img class="contacts-img" src="./images/contacts-berries-desktop.jpg"
+<img class="contacts-berries" src="./images/contacts-berries-desktop.jpg"
 alt="berries"
 width="400"
 height="502"
