--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -1,41 +1,101 @@
 /* ================================================= MOBILE 👇 ========================================= */
-@media screen and (max-width:767px) {
-    .contacts-main-paragraph {
-        width: 335px;
-        height: 96px;
-        font-family: var(--font-family);
-        font-weight: 500;
-        font-size: 32px;
-        line-height: 32px;
-        line-height: 100%;
-        letter-spacing: 0.04em;
-        text-transform: uppercase;
-        text-align: center;
-        color: #fff;
-        text-shadow: 0 4px 70px 0 rgba(0, 0, 0, 0.1);
-        margin: auto;
-    }
-    .contacts-melon {
-        gap: 0px;
-        border-radius: 20px;
-        }
+@media screen and (max-width: 767px) {
+  .contacts-main-paragraph {
+    width: 335px;
+    height: 96px;
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 32px;
+    line-height: 100%;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    text-align: center;
+    color: #fff;
+    text-shadow: 0 4px 70px 0 rgba(0, 0, 0, 0.1);
+    margin: auto;
+  }
+  .contacts-melon {
+    gap: 0px;
+    border-radius: 20px;
+  }
 
-    .contacts-berries {
-        display: none;
-        }
-    .contacts-box {
-        display: none;
-        }
-
+  .contacts-berries {
+    display: none;
+  }
+  .contacts-box {
+    display: none;
+  }
 }
+/* ================================================= TABLET 👇 ========================================= */
+@media screen and (min-width: 768px) and (max-width: 1279px) {
+  .contacts-main-paragraph {
+    width: 648px;
+    height: 108px;
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 54px;
+    line-height: 54px;
+    line-height: 100%;
+    letter-spacing: 0.01em;
+    text-transform: uppercase;
+    text-align: center;
+    color: #fff;
+    text-shadow: 0 4px 70px 0 rgba(0, 0, 0, 0.1);
+    margin: auto;
+  }
+  .contacts-description {
+    font-family: var(--font-family);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: -0.04em;
+    text-align: center;
+    padding: 72px 24px;
+  }
 
+  .contacts-input {
+    width: 292px;
+    height: 48px;
+    top: 134px;
+    left: 100px;
+    gap: 0px;
+    border-radius: 100px;
+    opacity: 0.3px;
+    border: 1px solid rgba(255, 255, 255, 1);
+    background-color: transparent;
+    padding: 0px 24px;
+  }
 
+  .contacts-form {
+    text-align: center;
+    gap: 80px;
+  }
+  .contacts-button {
+    width: Hug (102px) px;
+    height: 48px;
+    top: 134px;
+    left: 290px;
+    padding: 15px 35px 15px 35px;
+    gap: 15px;
+    border-radius: 100px;
+    opacity: 0px;
+    background-color: #a4cb66;
+  }
 
-
+  .contacts-subscription {
+    margin-bottom: 150px;
+  }
+  .contacts-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+}
 
 /* ================================================= DESKTOP 👇 ========================================= */
 @media screen and (min-width: 1280px) {
-.contacts-main-paragraph {
+  .contacts-main-paragraph {
     width: 740px;
     height: 128px;
     font-family: var(--font-family);
@@ -49,53 +109,53 @@
     color: #fff;
     text-shadow: 0 4px 70px 0 rgba(0, 0, 0, 0.1);
     margin: auto;
-}
+  }
 
-.contacts-photos {
+  .contacts-photos {
     display: flex;
     flex-wrap: nowrap;
     gap: 24px;
     justify-content: center;
-}
-.contacts-melon {
-gap: 0px;
-border-radius: 20px;
-}
-
-.contacts-berries {
+  }
+  .contacts-melon {
     gap: 0px;
     border-radius: 20px;
-    }
+  }
 
-.contacts-description {
-font-family: var(--font-family);
-font-size: 14px;
-font-weight: 400;
-line-height: 18px;
-letter-spacing: -0.04em;
-text-align: center;
-padding: 72px 24px;
-}
+  .contacts-berries {
+    gap: 0px;
+    border-radius: 20px;
+  }
 
-.contacts-input {
-width: 292px;
-height: 48px;
-top: 134px;
-left: 100px;
-gap: 0px;
-border-radius: 100px;
-opacity: 0.3px;
-border: 1px solid rgba(255, 255, 255, 1);
-background-color: transparent;
-padding: 0px 24px;
-}
+  .contacts-description {
+    font-family: var(--font-family);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: -0.04em;
+    text-align: center;
+    padding: 72px 24px;
+  }
 
-.contacts-form {
+  .contacts-input {
+    width: 292px;
+    height: 48px;
+    top: 134px;
+    left: 100px;
+    gap: 0px;
+    border-radius: 100px;
+    opacity: 0.3px;
+    border: 1px solid rgba(255, 255, 255, 1);
+    background-color: transparent;
+    padding: 0px 24px;
+  }
+
+  .contacts-form {
     text-align: center;
     gap: 80px;
-}
-.contacts-button {
-    width: Hug (102px)px;
+  }
+  .contacts-button {
+    width: Hug (102px) px;
     height: 48px;
     top: 134px;
     left: 290px;
@@ -103,15 +163,15 @@ padding: 0px 24px;
     gap: 15px;
     border-radius: 100px;
     opacity: 0px;
-    background-color: #A4CB66;
-}
+    background-color: #a4cb66;
+  }
 
-.contacts-subscription {
-margin-bottom: 150px;
-}
-.contacts-box {
+  .contacts-subscription {
+    margin-bottom: 150px;
+  }
+  .contacts-box {
     display: flex;
     flex-direction: column;
     justify-content: center;
-}
+  }
 }
