--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -4,18 +4,42 @@
 <div class="contacts-fruits">
 <ul class="contacts-photos">
 <li>
-<img class="contacts-melon" src="./images/contacts-melon-desktop.jpg"
-alt="melon"
+<picture>
+<source
+media="(max-width: 767px)"
+srcset="./images/contacts-melon-mobile.jpg 1x,
+./images/contacts-melon-mobile@2x.jpg 2x"
+width="335"
+/>
+<source
+media="(min-width: 768px) and (max-width: 1279px)"
+srcset="./images/contacts-melon-tablet.jpg 1x
+./images/contacts-melon-tablet@2x.jpg 2x"
+width="344"
+/>
+<source
+media="(min-width: 1280px)"
+srcset="./images/contacts-melon-desktop.jpg 1x 
+./images/contacts-melon-desktop@2x.jpg 2x"
 width="792"
-height="502"
-/>   
+/>
+</picture>  
 </li>
 <li>
-<img class="contacts-berries" src="./images/contacts-berries-desktop.jpg"
-alt="berries"
-width="400"
-height="502"
-/>  
+    <picture>
+        <source
+        media="(min-width: 768px) and (max-width: 1279px)"
+        srcset="./images/contacts-berries-tablet.jpg 1x
+        ./images/contacts-berries-tablet@2x.jpg 2x"
+        width="344"
+        />
+        <source
+        media="(min-width: 1280px)"
+        srcset="./images/contacts-berries-desktop.jpg 1x 
+        ./images/contacts-berries-desktop@2x.jpg 2x"
+        width="400"
+        />
+        </picture>  
 </li>
 </ul>
 </div>
