--- a/src/sass/_thankyou.scss
+++ b/src/sass/_thankyou.scss
@@ -37,7 +37,7 @@
   fill: var(--white-color);
 }
 
-.aaa {
+.thankyou-text {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -52,11 +52,10 @@
   letter-spacing: var(--letter-spacing);
   text-transform: uppercase;
   color: var(--white-color);
-  // text-align: center;
   text-shadow: var(--text-shadow);
 }
 
-.thankyou-text {
+.thankyou-paragraph {
   line-height: 1.28571;
   letter-spacing: var(--letter-spacing);
   text-align: center;
@@ -70,20 +69,16 @@
   .modal-thankyou {
     width: 600px;
     min-height: 545px;
+    gap: 28px;
     padding: 68px 104px 80px 105px;
   }
 
-  .thankyou-picture {
-    margin-bottom: 28px;
+  .thankyou-text {
+    max-width: 391px;
   }
 
-  .thankyou-modal {
-    width: 600px;
-    min-height: 545px;
-    padding: 68px 104px 80px 105px;
-  }
-
-  .thankyou-picture {
-    margin-bottom: 28px;
+  .thankyou-title {
+    font-size: 40px;
+    line-height: 1.1;
   }
 }
