--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,58 +1,87 @@
 <section class="contacts">
-<h1 style="position: relative; top: 40px;" class="contacts-main-paragraph">Fresh Harvest Box has got you covered</h1>
+  <h1 style="position: relative; top: 40px" class="contacts-main-paragraph">
+    Fresh Harvest Box has got you covered
+  </h1>
 
-<div class="contacts-fruits">
-<ul class="contacts-photos">
-<li>
-<picture>
-<source
-media="(max-width: 767px)"
-srcset="./images/contacts-melon-mobile.jpg 1x,
-./images/contacts-melon-mobile@2x.jpg 2x"
-width="335"
-/>
-<source
-media="(min-width: 768px) and (max-width: 1279px)"
-srcset="./images/contacts-melon-tablet.jpg 1x
-./images/contacts-melon-tablet@2x.jpg 2x"
-width="344"
-/>
-<source
-media="(min-width: 1280px)"
-srcset="./images/contacts-melon-desktop.jpg 1x 
-./images/contacts-melon-desktop@2x.jpg 2x"
-width="792"
-/>
-</picture>  
-</li>
-<li>
-    <picture>
-        <source
-        media="(min-width: 768px) and (max-width: 1279px)"
-        srcset="./images/contacts-berries-tablet.jpg 1x
-        ./images/contacts-berries-tablet@2x.jpg 2x"
-        width="344"
-        />
-        <source
-        media="(min-width: 1280px)"
-        srcset="./images/contacts-berries-desktop.jpg 1x 
-        ./images/contacts-berries-desktop@2x.jpg 2x"
-        width="400"
-        />
-        </picture>  
-</li>
-</ul>
-</div>
+  <div class="contacts-fruits">
+    <ul class="contacts-photos">
+      <li>
+        <picture>
+          <source
+            media="(max-width: 767px)"
+            srcset="./images/contacts-melon-mobile.jpg 1x, ./images/contacts-melon-mobile@2x.jpg 2x"
+            width="335"
+          />
+          <img src="./images/contacts-melon-mobile.jpg" alt="melon" />
+          <source
+            media="(min-width: 768px) and (max-width: 1279px)"
+            srcset="./images/contacts-melon-tablet.jpg 1x, ./images/contacts-melon-tablet@2x.jpg 2x"
+            width="344"
+          />
+          <img src="./images/contacts-melon-tablet.jpg" alt="melon" />
+          <source
+            media="(min-width: 1280px)"
+            srcset="
+              ./images/contacts-melon-desktop.jpg    1x,
+              ./images/contacts-melon-desktop@2x.jpg 2x
+            "
+            width="792"
+          />
+          <img src="./images/contacts-melon-desktop.jpg" alt="melon" />
+        </picture>
+      </li>
+      <li>
+        <picture>
+          <source
+            media="(min-width: 768px) and (max-width: 1279px)"
+            srcset="
+              ./images/contacts-berries-tablet.jpg    1x,
+              ./images/contacts-berries-tablet@2x.jpg 2x
+            "
+            width="344"
+          />
+          <img src="./images/contacts-berries-tablet.jpg" alt="berries" />
+          <source
+            media="(min-width: 1280px)"
+            srcset="
+              ./images/contacts-berries-desktop.jpg    1x,
+              ./images/contacts-berries-desktop@2x.jpg 2x
+            "
+            width="400"
+          />
+          <img src="./images/contacts-berries-desktop.jpg" alt="berries" />
+        </picture>
+      </li>
+    </ul>
+  </div>
 
-<div class="contacts-box">
-<p class="contacts-description">Our boxes are packed with delicious, nutritious fruits and vegetables, perfect for <br> anyone looking to eat healthier or support local farmers. Order your box today and <br> start enjoying the best that nature has to offer!</p>
+  <div class="contacts-box">
+    <p class="contacts-description">
+      Our boxes are packed with delicious, nutritious fruits and vegetables, perfect for <br />
+      anyone looking to eat healthier or support local farmers. Order your box today and <br />
+      start enjoying the best that nature has to offer!
+    </p>
 
-<div class="contacts-subscription">
-<form class="contacts-form">
-<label class="contacts-label">
-<input class="contacts-input" type="email" name="email" placeholder="Enter email..." required />
-</label>
-<button style="position: relative; top: -0.5px; left: -107px;" type="submit" class="contacts-button" id="contacts-modal-button" >Send</button>
-</div>
-</div>
+    <div class="contacts-subscription">
+      <form class="contacts-form">
+        <label class="contacts-label">
+          <input
+            class="contacts-input"
+            type="email"
+            name="email"
+            placeholder="Enter email..."
+            required
+          />
+        </label>
+        <button
+          style="position: relative; top: -0.5px; left: -107px"
+          type="submit"
+          class="contacts-button"
+          id="contacts-modal-button"
+        >
+          Send
+        </button>
+      </form>
+    </div>
+  </div>
 </section>
