--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -12,13 +12,12 @@
             srcset="./images/contacts-melon-mobile.jpg 1x, ./images/contacts-melon-mobile@2x.jpg 2x"
             width="335"
           />
-          <img src="./images/contacts-melon-mobile.jpg" alt="melon" />
+
           <source
             media="(min-width: 768px) and (max-width: 1279px)"
             srcset="./images/contacts-melon-tablet.jpg 1x, ./images/contacts-melon-tablet@2x.jpg 2x"
             width="344"
           />
-          <img src="./images/contacts-melon-tablet.jpg" alt="melon" />
           <source
             media="(min-width: 1280px)"
             srcset="
@@ -27,7 +26,7 @@
             "
             width="792"
           />
-          <img src="./images/contacts-melon-desktop.jpg" alt="melon" />
+          <img class="contacts-melon" src="./images/contacts-melon-desktop.jpg" alt="melon" />
         </picture>
       </li>
       <li>
@@ -40,7 +39,6 @@
             "
             width="344"
           />
-          <img src="./images/contacts-berries-tablet.jpg" alt="berries" />
           <source
             media="(min-width: 1280px)"
             srcset="
@@ -49,7 +47,7 @@
             "
             width="400"
           />
-          <img src="./images/contacts-berries-desktop.jpg" alt="berries" />
+          <img class="contacts-berries" src="./images/contacts-berries-desktop.jpg" alt="berries" />
         </picture>
       </li>
     </ul>
