--- a/src/partials/howitworks.html
+++ b/src/partials/howitworks.html
@@ -1,4 +1,4 @@
-<section class="howitworks container">
+<section class="howitworks container" id="how-it-works">
   <div class="howitworks-header">
     <h2 class="howitworks-title">To order your fruit basket, simply follow these easy steps</h2>
     <p class="howitworks-text">
