Revert "feature/howitworks"
This reverts commit fe5af06cb77acb6c3700ed81107f6d4497062bc4.

--- a/src/partials/howitworks.html
+++ b/src/partials/howitworks.html
@@ -1,4 +1,4 @@
-<section class="howitworks container" id="how-it-works">
+<section class="howitworks container">
   <div class="howitworks-header">
     <h2 class="howitworks-title">To order your fruit basket, simply follow these easy steps</h2>
     <p class="howitworks-text">
