--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,7 +1,5 @@
-<section class="contacts">
-  <h1 style="position: relative; top: 40px" class="contacts-main-paragraph">
-    Fresh Harvest Box has got you covered
-  </h1>
+<section class="contacts container">
+  <h1 class="contacts-main-paragraph">Fresh Harvest Box has got you covered</h1>
 
   <div class="contacts-fruits">
     <ul class="contacts-photos">
@@ -55,9 +53,9 @@
 
   <div class="contacts-box">
     <p class="contacts-description">
-      Our boxes are packed with delicious, nutritious fruits and vegetables, perfect for <br />
-      anyone looking to eat healthier or support local farmers. Order your box today and <br />
-      start enjoying the best that nature has to offer!
+      Our boxes are packed with delicious, nutritious fruits and vegetables, perfect for anyone
+      looking to eat healthier or support local farmers. Order your box today and start enjoying the
+      best that nature has to offer!
     </p>
 
     <div class="contacts-subscription">
@@ -71,14 +69,7 @@
             required
           />
         </label>
-        <button
-          style="position: relative; top: -0.5px; left: -107px"
-          type="submit"
-          class="contacts-button"
-          id="contacts-modal-button"
-        >
-          Send
-        </button>
+        <button type="submit" class="contacts-button" id="contacts-modal-button">Send</button>
       </form>
     </div>
   </div>
