--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -69,7 +69,14 @@
             required
           />
         </label>
-        <button type="submit" class="contacts-button" id="contacts-modal-button">Send</button>
+        <button
+          type="submit"
+          class="contacts-button"
+          id="contacts-modal-button"
+          onclick="showModal(modalThankYou)"
+        >
+          Send
+        </button>
       </form>
     </div>
   </div>
