--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer-background">
-  <div>
+  <div class="footer-image-container">
     <img
       class="footer-woman-image"
       src="images/footer-girl-mobile.jpg"
@@ -7,21 +7,21 @@
     hands."
     />
   </div>
-  <div>
+  <div class="footer-logo">
     <svg class="footer-icon-logo" width="16" height="16">
       <use href="./images/icons.svg#icon-logo"></use>
     </svg>
     <span class="footer-text-logo">fresh harvest box</span>
   </div>
-  <div class="footer-text-logo">
-    <ul>
-      <li>How It Works</li>
-      <li>Fruits</li>
-      <li>Cantacts</li>
+  <div>
+    <ul class="footer-menu">
+      <li><a class="footer-menu-item" href="#how_it_works">How It Works</a></li>
+      <li><a class="footer-menu-item" href="#fruits">Fruits</a></li>
+      <li><a class="footer-menu-item" href="contacts">Contacts</a></li>
     </ul>
   </div>
   <div>
-    <ul>
+    <ul class="footer-menu">
       <li>
         <a href="https://www.facebook.com" target="_blank"
           ><svg class="footer-socials-logo">
@@ -45,8 +45,9 @@
       </li>
     </ul>
   </div>
-  <address class="footer-text-logo">
-    <a class="footer-text-logo" href="tel:+380 (68) 443-94-26">+380 (68) 443-94-26</a><br />
+  <address class="footer-contact">
+    <a class="footer-text" href="tel:+380 (68) 443-94-26">+380 (68) 443-94-26</a><br />
+    <br />
     1678 S. Pioneer Road<br />
     Salt Lake City UT<br />
     84104
