--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -3,7 +3,7 @@
     <div class="hero-header-div">
         <h1 class="hero-header">fresh harvest box is&nbsp;your&nbsp;one-stop place for a delicious fruit basket</h1>
 
-        <ul class="hero-fruits">
+        <!-- <ul class="hero-fruits">
             <li class="hero-fruits-li">
                 <img alt="blurred small image of strawberries" srcset="./images/hero-straw-mobile.png 1x,
                 ./images/hero-straw-mobile@2x.png 2x" src="./images/hero-straw-mobile.png" />
@@ -11,11 +11,48 @@
             <li class="hero-fruits-li">
                 <img alt="blurred small image of bananas" srcset="./images/hero-ban-mobile.png 1x,
                 ./images/hero-ban-mobile@2x.png 2x" src="./images/hero-ban-mobile.png" />
-        </ul>
+        </ul> -->
     </div>
 
     <div class="hero-banner">
-        <button class="hero-shop-button" type="button">shop now</button>
+
+        <svg class="hero-banner-outline-svg"
+        
+        width="343" height="517" viewBox="0 0 343 517" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g filter="url(#filter0_d_5503_37)">
+                    <mask id="path-1-inside-1_5503_37" fill="white">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M338.311 342.306V166.694C338.311 75.0103 263.627 0.685984 171.5 0.685984C79.3729 0.685984 4.6893 75.0103 4.6893 166.694V342.306C4.6893 433.99 79.3729 508.314 171.5 508.314C263.627 508.314 338.311 433.99 338.311 342.306ZM171.5 0C78.9924 0 4 74.6316 4 166.694V342.306C4 434.368 78.9924 509 171.5 509C264.008 509 339 434.368 339 342.306V166.694C339 74.6316 264.008 0 171.5 0Z" />
+                    </mask>
+                    <path
+                        d="M339.311 342.306V166.694H337.311V342.306H339.311ZM339.311 166.694C339.311 74.4535 264.175 -0.314016 171.5 -0.314016V1.68598C263.079 1.68598 337.311 75.5671 337.311 166.694H339.311ZM171.5 -0.314016C78.8252 -0.314016 3.6893 74.4535 3.6893 166.694H5.6893C5.6893 75.5671 79.9207 1.68598 171.5 1.68598V-0.314016ZM3.6893 166.694V342.306H5.6893V166.694H3.6893ZM3.6893 342.306C3.6893 434.547 78.8252 509.314 171.5 509.314V507.314C79.9207 507.314 5.6893 433.433 5.6893 342.306H3.6893ZM171.5 509.314C264.175 509.314 339.311 434.547 339.311 342.306H337.311C337.311 433.433 263.079 507.314 171.5 507.314V509.314ZM171.5 -1C78.4447 -1 3 74.0748 3 166.694H5C5 75.1884 79.5402 1 171.5 1V-1ZM3 166.694V342.306H5V166.694H3ZM3 342.306C3 434.925 78.4447 510 171.5 510V508C79.5402 508 5 433.812 5 342.306H3ZM171.5 510C264.555 510 340 434.925 340 342.306H338C338 433.812 263.46 508 171.5 508V510ZM340 342.306V166.694H338V342.306H340ZM340 166.694C340 74.0748 264.555 -1 171.5 -1V1C263.46 1 338 75.1884 338 166.694H340Z"
+                        fill="url(#paint0_linear_5503_37)" mask="url(#path-1-inside-1_5503_37)" />
+                </g>
+                <defs>
+                    <filter id="filter0_d_5503_37" x="0" y="0" width="343" height="517" filterUnits="userSpaceOnUse"
+                        color-interpolation-filters="sRGB">
+                        <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                        <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+                            result="hardAlpha" />
+                        <feOffset dy="4" />
+                        <feGaussianBlur stdDeviation="2" />
+                        <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0" />
+                        <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_5503_37" />
+                        <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_5503_37" result="shape" />
+                    </filter>
+                    <linearGradient id="paint0_linear_5503_37" x1="181.84" y1="517.918" x2="181.157" y2="117.303"
+                        gradientUnits="userSpaceOnUse">
+                        <stop stop-color="white" />
+                        <stop offset="0.411317" stop-color="white" stop-opacity="0.441769" />
+                        <stop offset="1" stop-color="white" stop-opacity="0" />
+                    </linearGradient>
+                </defs>
+        </svg>
+
+
+        <button class="hero-shop-button" type="button">
+            <a class="hero-shop-link" href="#organic_fruits">shop now</a>
+        </button>
 
     </div>
 
@@ -38,10 +75,10 @@
 
         <div class="second-block">
             <ul class="anchor-buttons">
-                <li class="anchor-li">#organic</li>
-                <li class="anchor-li">#products</li>
-                <li class="anchor-li">#basket</li>
-                <li class="anchor-li">#fruits</li>
+                <li class="anchor-li"><h3>#organic</h3></li>
+                <li class="anchor-li"><h3>#products</h3></li>
+                <li class="anchor-li"><h3>#basket</h3></li>
+                <li class="anchor-li"><h3>#fruits</h3></li>
             </ul>
 
 
