--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -3,22 +3,20 @@
     <div class="hero-header-div">
         <h1 class="hero-header">fresh harvest box is&nbsp;your&nbsp;one-stop place for a delicious fruit basket</h1>
 
-        <!-- <ul class="hero-fruits">
-            <li class="hero-fruits-li">
-                <img alt="blurred small image of strawberries" srcset="./images/hero-straw-mobile.png 1x,
-                ./images/hero-straw-mobile@2x.png 2x" src="./images/hero-straw-mobile.png" />
-            </li>
-            <li class="hero-fruits-li">
-                <img alt="blurred small image of bananas" srcset="./images/hero-ban-mobile.png 1x,
-                ./images/hero-ban-mobile@2x.png 2x" src="./images/hero-ban-mobile.png" />
-        </ul> -->
+        <img class="hero-header-img-strawberries"
+        alt="blurred small image of strawberries"
+        srcset="./images/hero-straw-mobile.png 1x, ./images/hero-straw-mobile@2x.png 2x" src="./images/hero-straw-mobile.png"
+        />
+
+        <img class="hero-header-img-bananas"
+        alt="blurred small image of bananas"
+        srcset="./images/hero-ban-mobile.png 1x,./images/hero-ban-mobile@2x.png 2x" src="./images/hero-ban-mobile.png"
+        />
     </div>
 
     <div class="hero-banner">
-
         <svg class="hero-banner-outline-svg"
-        
-        width="343" height="517" viewBox="0 0 343 517" fill="none" xmlns="http://www.w3.org/2000/svg">
+         width="343" height="517" viewBox="0 0 343 517" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g filter="url(#filter0_d_5503_37)">
                     <mask id="path-1-inside-1_5503_37" fill="white">
                         <path fill-rule="evenodd" clip-rule="evenodd"
@@ -49,11 +47,9 @@
                 </defs>
         </svg>
 
-
         <button class="hero-shop-button" type="button">
             <a class="hero-shop-link" href="#organic_fruits">shop now</a>
         </button>
-
     </div>
 
     <div class="fruit-desc-area">
