--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,55 +1,65 @@
-<footer class="footer-background">
-  <div class="footer-image-container">
-    <img
-      class="footer-woman-image"
-      src="images/footer-girl-mobile.jpg"
-      alt="Happy woman holding bananas in her
+<footer class="footer-background container">
+  <div class="footer-wrap">
+    <div>
+      <div class="footer-image-container">
+        <img
+          class="footer-woman-image"
+          src="images/footer-girl-mobile.jpg"
+          alt="Happy woman holding bananas in her
     hands."
-    />
+        />
+      </div>
+      <div class="footer-logo">
+        <svg class="footer-icon-logo" width="16" height="16">
+          <use href="./images/icons.svg#icon-logo"></use>
+        </svg>
+        <span class="footer-text-logo">fresh harvest box</span>
+      </div>
+    </div>
+    <div>
+      <ul class="footer-menu">
+        <li><a class="footer-menu-item" href="#how-it-works">How It Works</a></li>
+        <li><a class="footer-menu-item" href="#fruits">Fruits</a></li>
+        <li><a class="footer-menu-item" href="#contacts">Contacts</a></li>
+      </ul>
+    </div>
+    <div>
+      <div>
+        <ul class="footer-menu">
+          <li>
+            <a href="https://www.facebook.com" target="_blank"
+              ><svg class="footer-socials-logo">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com" target="_blank"
+              ><svg class="footer-socials-logo">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.youtube.com" target="_blank"
+              ><svg class="footer-socials-logo">
+                <use href="./images/icons.svg#icon-youtube"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <address class="footer-contact">
+        <a class="footer-text" href="tel:+380 (68) 443-94-26">+380 (68) 443-94-26</a><br />
+        <br />
+        <a
+          class="footer-text"
+          href="https://www.google.com/maps/place/1678+Pioneer+Rd,+Salt+Lake+City,+UT+84104,+Stany+Zjednoczone/@40.7335892,-111.9626616,17z/data=!3m1!4b1!4m6!3m5!1s0x8752f35b0826d399:0x2b26230524fd3ca3!8m2!3d40.7335892!4d-111.9600867!16s%2Fg%2F11bw41vm_p?entry=ttu"
+          >1678 S. Pioneer Road<br />
+          Salt Lake City UT<br />
+          84104</a
+        >
+      </address>
+    </div>
   </div>
-  <div class="footer-logo">
-    <svg class="footer-icon-logo" width="16" height="16">
-      <use href="./images/icons.svg#icon-logo"></use>
-    </svg>
-    <span class="footer-text-logo">fresh harvest box</span>
-  </div>
-  <div>
-    <ul class="footer-menu">
-      <li><a class="footer-menu-item" href="#how_it_works">How It Works</a></li>
-      <li><a class="footer-menu-item" href="#fruits">Fruits</a></li>
-      <li><a class="footer-menu-item" href="contacts">Contacts</a></li>
-    </ul>
-  </div>
-  <div>
-    <ul class="footer-menu">
-      <li>
-        <a href="https://www.facebook.com" target="_blank"
-          ><svg class="footer-socials-logo">
-            <use href="./images/icons.svg#icon-facebook"></use>
-          </svg>
-        </a>
-      </li>
-      <li>
-        <a href="https://www.instagram.com" target="_blank"
-          ><svg class="footer-socials-logo">
-            <use href="./images/icons.svg#icon-instagram"></use>
-          </svg>
-        </a>
-      </li>
-      <li>
-        <a href="https://www.youtube.com" target="_blank"
-          ><svg class="footer-socials-logo">
-            <use href="./images/icons.svg#icon-youtube"></use>
-          </svg>
-        </a>
-      </li>
-    </ul>
-  </div>
-  <address class="footer-contact">
-    <a class="footer-text" href="tel:+380 (68) 443-94-26">+380 (68) 443-94-26</a><br />
-    <br />
-    1678 S. Pioneer Road<br />
-    Salt Lake City UT<br />
-    84104
-  </address>
 </footer>
