--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,10 +1,12 @@
-footer {
-  padding-top: 80px;
-  padding-bottom: 80px;
+.footer-wrap {
+  display: flex;
+  flex-direction: column;
 }
 
 .footer-background {
   background-color: var(--white-color);
+  margin-top: 80px;
+  margin-bottom: 80px;
 }
 
 .footer-image-container {
@@ -20,6 +22,7 @@ footer {
 .footer-logo {
   display: flex;
   justify-content: center;
+  align-items: center;
   margin: 20 0 20 0;
 }
 
@@ -29,13 +32,13 @@ footer {
   font-weight: 700;
   font-size: 14px;
   line-height: 18px;
-  text-align: center;
   text-transform: uppercase;
   color: var(--bg-color);
 }
 
 .footer-icon-logo {
   display: block;
+  margin-right: 8px;
 }
 
 .footer-text {
@@ -52,6 +55,8 @@ footer {
 .footer-menu {
   display: flex;
   justify-content: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .footer-menu-item {
@@ -63,4 +68,13 @@ footer {
 .footer-contact {
   color: var(--bg-color);
   text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+}
+
+@media screen and (min-width: 1280px) {
+  .footer-wrap {
+    flex-direction: row;
+  }
 }
