--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -1,3 +1,6 @@
+.contacts {
+  background-color: var(--bg-color);
+}
 /* ================================================= MOBILE 👇 ========================================= */
 @media screen and (max-width: 767px) {
   .contacts-main-paragraph {
