--- a/src/sass/_howitworks.scss
+++ b/src/sass/_howitworks.scss
@@ -1,5 +1,6 @@
 .howitworks {
-  margin-bottom: 80px;
+  background-color: var(--bg-color);
+  padding-bottom: 80px;
 }
 
 .howitworks-header {
@@ -116,12 +117,7 @@
 
 @media screen and (min-width: 768px) {
   .howitworks {
-    margin-bottom: 144px;
-  }
-
-  .container {
-    max-width: 768px;
-    padding: 0 32px;
+    padding-bottom: 144px;
   }
 
   .howitworks-title {
@@ -163,11 +159,7 @@
 
 @media screen and (min-width: 1280px) {
   .howitworks {
-    margin-bottom: 150px;
-  }
-
-  .container {
-    max-width: 1280px;
+    padding-bottom: 150px;
   }
 
   .howitworks-list {
