--- a/src/partials/fruits.html
+++ b/src/partials/fruits.html
@@ -1,5 +1,6 @@
-<section class="fruits container">
-    <div class="fruit-header">
+<section class="fruits">
+    <div class="container">
+        <div class="fruit-header">
         <div class="fruit-header-container">
             <h2>Organic Fruits</h2>
             <p>Our organic fruits are hand-picked from local farms and delivered straight to your doorstep, 
@@ -7,9 +8,9 @@
             We offer a wide selection of organic fruits grown without the use of harmful pesticides or chemicals.
             </p>
         </div>
-    </div>
+        </div>
 
-    <div class="cards-container">
+        <div class="cards-container">
             <ul class="fruit-cards">
                 <li class="card one">
                     <div class="card-inside">
@@ -129,14 +130,15 @@
                     </div>
                 </li>
             </ul>
-    </div>
+        </div>
 
-    <div class="order-btn">
+        <div class="order-btn">
         <button id="order-btn-click">
             <svg class="arrow-order-btn" width="14" height="14">
                 <use href="/src/images/icons.svg#icon-arrow"></use>
             </svg>
             Order
         </button>
+        </div>
     </div>
 </section>
