--- a/src/sass/_fruits.scss
+++ b/src/sass/_fruits.scss
@@ -5,43 +5,43 @@
     background-color: var(--bg-color);
 }
 
-.fruits .cards-container .fruit-cards .card:nth-child(1) {
+.fruits .container .cards-container .fruit-cards .card:nth-child(1) {
     background-color: #F8766B;
 }
 
-.fruits .cards-container .fruit-cards .card:nth-child(2) {
+.fruits .container .cards-container .fruit-cards .card:nth-child(2) {
     background-color: #EDD251;
 }
 
-.fruits .cards-container .fruit-cards .card:nth-child(3) {
+.fruits .container .cards-container .fruit-cards .card:nth-child(3) {
     background-color: #9DC262;
 }
 
-.fruits .cards-container .fruit-cards .card:nth-child(4) {
+.fruits .container .cards-container .fruit-cards .card:nth-child(4) {
     background-color: #BFD663;
 }
 
-.fruits .cards-container .fruit-cards .card:nth-child(5) {
+.fruits .container .cards-container .fruit-cards .card:nth-child(5) {
     background-color: #E93F29;
 }
 
-.fruits .cards-container .fruit-cards .card:nth-child(6) {
+.fruits .container .cards-container .fruit-cards .card:nth-child(6) {
     background-color: #DB4F4B;
 }
 
-.fruits .cards-container .fruit-cards .card:nth-child(7) {
+.fruits .container .cards-container .fruit-cards .card:nth-child(7) {
     background-color: #9B5366;
 }
 
-.fruits .cards-container .fruit-cards .card:nth-child(8) {
+.fruits .container .cards-container .fruit-cards .card:nth-child(8) {
     background-color: #F47F4C;
 }
 
-.fruits .cards-container .fruit-cards .card:nth-child(9) {
+.fruits .container .cards-container .fruit-cards .card:nth-child(9) {
     background-color: #98B37E;
 }
 
-.fruits .fruit-header {
+.fruits .container .fruit-header {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -49,7 +49,7 @@
     margin-bottom: 44px;
 }
 
-.fruits .fruit-header .fruit-header-container {
+.fruits .container .fruit-header .fruit-header-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -58,7 +58,7 @@
     gap: 14px;
 }
 
-.fruits .fruit-header .fruit-header-container p { 
+.fruits .container .fruit-header .fruit-header-container p { 
     width: 334px;
     height: 90px;
     font-size: 14px;
@@ -69,7 +69,7 @@
     color: var(--white-color);
 }
 
-.fruits .fruit-header .fruit-header-container h2 {
+.fruits .container .fruit-header .fruit-header-container h2 {
     font-size: 28px;
     font-weight: 500;
     line-height: 28px;
@@ -79,26 +79,24 @@
     color: var(--white-color);
 }
 
-/* CARD */
-
-.fruits .cards-container .fruit-cards {
+.fruits .container .cards-container .fruit-cards {
     display: grid;
     grid-template-columns: 1fr;
     grid-row-gap: 14px;
 }
 
-.fruits .cards-container .fruit-cards .card {
+.fruits .container .cards-container .fruit-cards .card {
     width: 335px;
     height: 465px;
     border-radius: 20px;
     list-style: none;
 }
 
-.fruits .cards-container .fruit-cards .card .card-inside {
+.fruits .container .cards-container .fruit-cards .card .card-inside {
     position: relative;
 }
 
-.fruits .cards-container .fruit-cards .card .card-inside h3 {
+.fruits .container .cards-container .fruit-cards .card .card-inside h3 {
     font-size: 24px;
     font-weight: 700;
     line-height: 38px;
@@ -110,7 +108,7 @@
     gap: 7px;
 }
 
-.fruits .cards-container .fruit-cards .card .card-inside p {
+.fruits .container .cards-container .fruit-cards .card .card-inside p {
     font-size: 14px;
     font-weight: 400;
     line-height: 24px;
@@ -121,12 +119,12 @@
     gap: 4px;
 }
 
-.fruits .cards-container .fruit-cards .card .card-inside img {
+.fruits .container .cards-container .fruit-cards .card .card-inside img {
     width: 295px;
     margin-left: 20px;
 }
 
-.fruits .cards-container .fruit-cards .card .card-inside .fruits-shadow {
+.fruits .container .cards-container .fruit-cards .card .card-inside .fruits-shadow {
     background-color: var(--black-color);
     width: 195px;
     height: 38px;
@@ -138,7 +136,7 @@
     top: 365px;
 }
 
-.fruits .cards-container .fruit-cards .card .card-inside button {
+.fruits .container .cards-container .fruit-cards .card .card-inside button {
     width: 126px;
     height: 42px;
     top: 399px;
@@ -161,23 +159,20 @@
     transition: all 0.3s ease-in;
 }
 
-.fruits .cards-container .fruit-cards .card + .nine,
-.fruits .cards-container .fruit-cards .card + .eight,
-.fruits .cards-container .fruit-cards .card + .seven {
+.fruits .container .cards-container .fruit-cards .card + .nine,
+.fruits .container .cards-container .fruit-cards .card + .eight,
+.fruits .container .cards-container .fruit-cards .card + .seven {
     display: none;
 }
 
-
-/* BOTTOM BUTTON */
-
-.fruits .order-btn {
+.fruits .container .order-btn {
     display: flex;
     justify-content: center;
     margin-top: 44px;
-    margin-bottom: 80px;
+    padding-bottom: 80px;
 }
 
-.fruits .order-btn button {
+.fruits .container .order-btn button {
     width: 80px;
     height: 80px;
     border-radius: 50%;
@@ -195,7 +190,7 @@
     transition: all 0.5s ease-in-out;
 }
 
-.fruits .order-btn button svg {
+.fruits .container .order-btn button svg {
     width: 14px;
     height: 14px;
     fill: var(--white-color);
@@ -203,35 +198,31 @@
     transition: all 0.3s ease-in;
 }
 
-
-/* HOVER STUFF */
-
-
-.fruits .order-btn button:hover {
+.fruits .container .order-btn button:hover {
     width: 100px;
     height: 100px;
     font-size: 18px;
     rotate: -374deg;
 }
 
-.fruits .order-btn button:hover img {
+.fruits .container .order-btn button:hover img {
     width: 18px;
     height: 18px;
 }
 
 @media screen and (min-width: 768px) {
 
-    .fruits.container {
+    .fruits .container {
         max-width: 768px;
         padding: 0 32px;
     }
     
-    .fruits .fruit-header .fruit-header-container {
+    .fruits .container .fruit-header .fruit-header-container {
         width: 100%;
         height: 112px;
     }
     
-    .fruits .fruit-header .fruit-header-container p { 
+    .fruits .container .fruit-header .fruit-header-container p { 
         width: 547px;
         height: 54px;
         font-size: 14px;
@@ -242,43 +233,41 @@
         color: var(--white-color);
     }
     
-    .fruits .fruit-header .fruit-header-container h2 {
+    .fruits .container .fruit-header .fruit-header-container h2 {
         font-size: 40px;
         line-height: 44px;
     }
 
-    /* CARD */
-
-    .fruits .cards-container .fruit-cards {
+    .fruits .container .cards-container .fruit-cards {
         width: 100%;
         grid-template-columns: 344px 344px;
         grid-column-gap: 16px;
         grid-row-gap: 16px;
     }
 
-    .fruits .cards-container .fruit-cards .card {
+    .fruits .container .cards-container .fruit-cards .card {
         width: 344px;
     }
 
-    .fruits .cards-container .fruit-cards .card .card-inside h3 {
+    .fruits .container .cards-container .fruit-cards .card .card-inside h3 {
         font-size: 32px;
     }
 
-    .fruits .cards-container .fruit-cards .card .card-inside p {
+    .fruits .container .cards-container .fruit-cards .card .card-inside p {
         font-size: 18px;
     }
 
-    .fruits .cards-container .fruit-cards .card .card-inside img {
+    .fruits .container .cards-container .fruit-cards .card .card-inside img {
         width: 295px;
         margin-left: 25px;
     }
 
-    .fruits .cards-container .fruit-cards .card .card-inside .fruits-shadow {
+    .fruits .container .cards-container .fruit-cards .card .card-inside .fruits-shadow {
         left: 75px;
         top: 365px;
     }
 
-    .fruits .cards-container .fruit-cards .card .card-inside button {
+    .fruits .container .cards-container .fruit-cards .card .card-inside button {
         width: 136px;
         height: 48px;
         left: 24px;
@@ -288,33 +277,25 @@
         transition: all 0.3s ease-in;
     }
 
-    .fruits .cards-container .fruit-cards .card + .nine {
+    .fruits .container .cards-container .fruit-cards .card + .nine {
         display: none;
     }
 
-
-    /* BOTTOM BUTTON */
-
-
-    .fruits .order-btn button {
+    .fruits .container .order-btn button {
         width: 114px;
         height: 114px;
         font-size: 18px;
         transition: all 0.5s ease-in-out;
     }
 
-
-    /* HOVER STUFF */
-
-
-    .fruits .order-btn button:hover {
+    .fruits .container .order-btn button:hover {
         width: 134px;
         height: 134px;
         font-size: 22px;
         rotate: -374deg;
     }
 
-    .fruits .order-btn button:hover img {
+    .fruits .container .order-btn button:hover img {
         width: 18px;
         height: 18px;
     }
@@ -322,39 +303,40 @@
 
 @media screen and (min-width: 1280px) {
 
-    .fruits.container {
+    .fruits .container {
         max-width: 1280px;
         padding: 0 32px;
     }
 
-
-    /* CARD */
-
-    .fruits .cards-container .fruit-cards {
+    .fruits .container .cards-container .fruit-cards {
         grid-template-columns: 1fr 1fr 1fr;
         grid-column-gap: 24px;
         grid-row-gap: 24px;
     }
 
-    .fruits .cards-container .fruit-cards .card {
+    .fruits .container .cards-container .fruit-cards .card {
         width: 389px;
         height: 465px;
         border-radius: 20px;
         list-style: none;
     }
 
-    .fruits .cards-container .fruit-cards .card .card-inside img {
+    .fruits .container .cards-container .fruit-cards .card .card-inside img {
         margin-left: 47px;
     }
 
-    .fruits .cards-container .fruit-cards .card .card-inside .fruits-shadow {
+    .fruits .container .cards-container .fruit-cards .card .card-inside .fruits-shadow {
         left: 97px;
         top: 365px;
     }
 
-    .fruits .cards-container .fruit-cards .card + .nine,
-    .fruits .cards-container .fruit-cards .card + .eight,
-    .fruits .cards-container .fruit-cards .card + .seven  {
+    .fruits .container .cards-container .fruit-cards .card + .nine,
+    .fruits .container .cards-container .fruit-cards .card + .eight,
+    .fruits .container .cards-container .fruit-cards .card + .seven  {
         display: block;
+    }
+
+    .fruits .container .order-btn {
+        padding-bottom: 150px;
     }
 }
