--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,31 +1,33 @@
 <footer class="footer-background container">
   <div class="footer-wrap">
     <div>
-      <div class="footer-image-container">
-        <img
-          class="footer-woman-image"
-          src="images/footer-girl-mobile.jpg"
-          alt="Happy woman holding bananas in her
+      <div class="footer-tablet-wrap">
+        <div class="footer-image-container">
+          <img
+            class="footer-woman-image"
+            src="images/footer-girl-mobile.jpg"
+            alt="Happy woman holding bananas in her
     hands."
-        />
+          />
+        </div>
+        <div class="footer-logo">
+          <svg class="footer-icon-logo" width="16" height="16">
+            <use href="./images/icons.svg#icon-logo"></use>
+          </svg>
+          <span class="footer-text-logo">fresh harvest box</span>
+        </div>
       </div>
-      <div class="footer-logo">
-        <svg class="footer-icon-logo" width="16" height="16">
-          <use href="./images/icons.svg#icon-logo"></use>
-        </svg>
-        <span class="footer-text-logo">fresh harvest box</span>
+      <div>
+        <ul class="footer-menu">
+          <li><a class="footer-menu-item" href="#how-it-works">How It Works</a></li>
+          <li><a class="footer-menu-item" href="#fruits">Fruits</a></li>
+          <li><a class="footer-menu-item" href="#contacts">Contacts</a></li>
+        </ul>
       </div>
-    </div>
-    <div>
-      <ul class="footer-menu">
-        <li><a class="footer-menu-item" href="#how-it-works">How It Works</a></li>
-        <li><a class="footer-menu-item" href="#fruits">Fruits</a></li>
-        <li><a class="footer-menu-item" href="#contacts">Contacts</a></li>
-      </ul>
     </div>
     <div>
       <div>
-        <ul class="footer-menu">
+        <ul class="footer-socials">
           <li>
             <a href="https://www.facebook.com" target="_blank"
               ><svg class="footer-socials-logo">
