div container added

--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -1,4 +1,4 @@
-.contacts {
+.container {
   background-color: var(--bg-color);
 }
 /* ================================================= MOBILE 👇 ========================================= */
