--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -1,4 +1,4 @@
-.container {
+.contacts-main-div {
   background-color: var(--bg-color);
 }
 /* ================================================= MOBILE 👇 ========================================= */
