@media queries for HERO banner
Ending of @media queries, including the "shop now" button

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -2,7 +2,7 @@
 <div class="container">
 
     <div class="hero-header-div">
-        <h1 class="hero-header">fresh harvest box is&nbsp;your&nbsp;one-stop place for a delicious fruit basket</h1>
+        <h1 class="hero-header">fresh harvest box is&nbsp;your&nbsp;one&#8209;stop place for a&nbsp;delicious fruit basket</h1>
 
         <img class="hero-header-img-strawberries"
         alt="blurred small image of strawberries"
@@ -16,7 +16,7 @@
     </div>
 
     <div class="hero-banner">
-        <svg class="hero-banner-outline-svg"
+        <svg class="hero-banner-outline-svg-small"
          width="343" height="517" viewBox="0 0 343 517" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g filter="url(#filter0_d_5503_37)">
                     <mask id="path-1-inside-1_5503_37" fill="white">
@@ -47,6 +47,8 @@
                     </linearGradient>
                 </defs>
         </svg>
+
+        
 
         <button class="hero-shop-button" type="button">
             <a class="hero-shop-link" href="#organic_fruits">shop now</a>
